k8s/base/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: receipt-backend-service
#   labels:
#     app: receipt-backend
# spec:
#   type: ClusterIP
#   ports:
#   - port: 80
#     targetPort: 9090
#     protocol: TCP
#   selector:
#     app: receipt-backend

apiVersion: v1
kind: Service
metadata:
  name: receipt-backend-service
  labels:
    app: receipt-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9090
  selector:
    app: receipt-backend
